<resources>
    <string name="app_name">Fire_checker</string>
    <string-array name="types">
        <item>Первоначальный осмотр</item>
        <item>Ежеквартальный осмотр</item>
        <item>Ежегодный осмотр</item>
        <item>Обслуживание</item>
        <item>Заправка</item>
        <item>Утилизация</item>
    </string-array>
    <string-array name="types_service_review">
        <item>Отправить на перезаправку</item>
        <item>Отправить в ремонт</item>
        <item>Вывести из эксплуатации</item>
    </string-array>
    <string-array name="types_on_service">
        <item>Принять с заправки</item>
        <item>Принять с ремонта</item>
        <item>Вывести из эксплуатации</item>
    </string-array>
    <string-array name="types_checking">
        <item>Проверка пройдена</item>
        <item>Отправить на перезаправку</item>
        <item>Отправить в ремонт</item>
        <item>Вывести из эксплуатации</item>
    </string-array>
    <string name="fire_error_existance">Огнетушитель\n с таким  QR-кодом\n не найден в системе</string>
    <string name="fire_error_used_user">Данный огнетушитель уже привязан к вашей организации</string>
    <string name="fire_error_used_dif">Данный огнетушитель привязан к другой организации</string>
    <string name="hard_problems_appearence">Отсутствие вмятин, сколов, глубоких царапин на корпусе, узлах управления, гайках и головке огнетушителя</string>
    <string name="appearence_problems">Состояние защитных и лакокрасочных покрытий удовлетворительно</string>
    <string name="instruction">Инструкция присутсвует</string>
    <string name="fuse">Предохранительное устройство в норме</string>
    <string name="manometr">Манометр исправен</string>
    <string name="label">Клеймо в наличии</string>
    <string name="bar">Велчина давления в огентушителе в норме</string>
    <string name = "weight">Масса огнетушителя в норме</string>
    <string name="shlang">Состояние гибгкого шланга и распылителя удовлетворительное</string>
    <string name="place">Состояние места установки удовлетворительное</string>
    <string name="utechka">Велчина утечки вытесняющего газа из газового баллона или ОТВ из газовых огнетушителей:</string>
    <string name="filter">Состояние фильтров удовлетворительоне</string>
    <string name="OTB">Состояние ОТВ удовлетворительное</string>
</resources>

