<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/special_white"
    tools:context=".Activity_everyyear_checking">

    <Button
        android:id="@+id/year_back_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_style"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="ВОЗВРАТ"
        android:textColor="@color/special_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/year_send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_style"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="ПРИНЯТЬ"
        android:textColor="@color/special_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="120dp"
        android:background="@color/special_black"
        android:foregroundGravity="center"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/special_white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/year_serial_number_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="175612334"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <CheckBox
                android:id="@+id/year_hard_problems_appearence_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/special_red"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:text="@string/hard_problems_appearence"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/year_problems_appearence_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/special_red"
                android:checked="false"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:text="@string/appearence_problems"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/year_instruction_problems_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/special_red"
                android:fontFamily="sans-serif-light"
                android:minHeight="48dp"
                android:text="@string/instruction"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/year_fuse_problems_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/special_red"
                android:fontFamily="sans-serif-light"
                android:minHeight="48dp"
                android:text="@string/fuse"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/year_manometr_problems_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/special_red"
                android:checked="false"
                android:fontFamily="sans-serif-light"

                android:minHeight="48dp"
                android:text="@string/manometr"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/year_label_problems_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"

                android:buttonTint="@color/special_red"
                android:fontFamily="sans-serif-light"
                android:text="@string/label"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/year_weight_problems_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"

                android:buttonTint="@color/special_red"
                android:fontFamily="sans-serif-light"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/year_shlang_problems_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/special_red"
                android:fontFamily="sans-serif-light"
                android:text="@string/shlang"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/year_place_problems_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/special_red"
                android:fontFamily="sans-serif-light"
                android:text="@string/place"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/year_bar_problems_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/special_red"
                android:fontFamily="sans-serif-light"
                android:text="@string/bar"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:visibility="visible" />

            <CheckBox
                android:id="@+id/year_filters_problems_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/special_red"
                android:fontFamily="sans-serif-light"
                android:text="@string/filter"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:visibility="visible" />

            <CheckBox
                android:id="@+id/year_otb_problems_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/special_red"
                android:fontFamily="sans-serif-light"
                android:text="@string/OTB"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/year_utechka_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/special_red"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/utechka"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/year_utechka_problems_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="#676767"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="Введите велечину утечки"
                android:textColor="@color/black"
                android:textColorHighlight="#1E1E1E"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />


            <EditText
                android:id="@+id/year_prim_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#676767"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="Примечание"
                android:textColor="@color/black"
                android:textColorHighlight="#1E1E1E"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>